--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "spacy": "^0.0.4",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
